# Agent-Studio

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py  agent_routes.py  flow_routes.py  run_routes.py  team_routes.py
app/core/: __init__.py  config.py  llm.py
app/repositories/: factory.py  in_memory.py  postgres.py
app/runners/: __init__.py  agent_runner.py  flow_runner.py
app/schemas/: contracts.py
app/services/: agent_service.py  flow_service.py  run_service.py  team_service.py
db/: schema.sql
docs/backend/: api-contract-v1.md  backend-implementation.md  database-schema-v1.md
