[project]
name = "agent-studio"
version = "0.1.0"
description = "Backend for Agent Studio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "openai>=1.51.0,<2.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "psycopg[binary]>=3.2.1,<4.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
